add cors and ratelimiting, health endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,20 @@
+# Database Configuration
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=password
 DB_NAME=csmonitor
+
+# Server Configuration
 PORT=3000
+
+# CORS Configuration (optional)
+# Comma-separated list of allowed origins, or * for all
+# CORS_ORIGIN=http://localhost:3000,https://yourdomain.com
+
+# Rate Limiting (optional)
+# Maximum requests per 15-minute window per IP
+# RATE_LIMIT_MAX=100
+
+# Environment (optional)
+# Set to 'development' to enable detailed error messages
+# NODE_ENV=production
