--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,14 @@ DB_NAME=csmonitor
 # Server Configuration
 PORT=3000
 
+# Redis Configuration (optional)
+# Set to 'true' to enable caching with Redis
+REDIS_ENABLED=false
+REDIS_HOST=localhost
+REDIS_PORT=6379
+# REDIS_PASSWORD=your_redis_password
+# REDIS_DB=0
+
 # CORS Configuration (optional)
 # Comma-separated list of allowed origins, or * for all
 # CORS_ORIGIN=http://localhost:3000,https://yourdomain.com
