--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "express-rate-limit": "^8.1.0",
     "gamedig": "^5.3.2",
     "mysql2": "^3.15.3",
+    "redis": "^5.9.0",
+    "socket.io": "^4.8.1",
     "winston": "^3.18.3"
   },
   "devDependencies": {
