--- a/package.json
+++ b/package.json
@@ -1,4 +1,30 @@
 {
+  "name": "server-api",
+  "version": "1.0.0",
+  "description": "Game server tracking API with real-time updates",
+  "main": "src/server.js",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
+    "lint": "eslint src/**/*.js",
+    "lint:fix": "eslint src/**/*.js --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "docker:build": "docker build -t server-api .",
+    "docker:run": "docker run -p 3000:3000 --env-file .env server-api",
+    "docker:compose": "docker-compose up -d",
+    "docker:compose:down": "docker-compose down",
+    "docker:compose:logs": "docker-compose logs -f api",
+    "admin:aggregate": "curl -X POST http://localhost:3000/api/admin/aggregate-daily",
+    "admin:cleanup": "curl -X POST http://localhost:3000/api/admin/cleanup-history?days=30"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -12,12 +38,18 @@
   },
   "devDependencies": {
     "eslint": "^9.38.0",
-    "prettier": "^3.6.2"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
+    "supertest": "^6.3.4"
   },
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "lint": "eslint src/**/*.js",
-    "format": "prettier --write ."
-  }
+  "keywords": [
+    "game-server",
+    "api",
+    "tracking",
+    "websocket",
+    "realtime"
+  ],
+  "author": "jvnipers",
+  "license": "MIT"
 }
