--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-rate-limit": "^8.1.0",
     "gamedig": "^5.3.2",
     "mysql2": "^3.15.3",
+    "rcon-srcds": "^2.1.0",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3"
