add host for reverse proxy setup

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DB_NAME=csmonitor
 
 # Server Configuration
 PORT=3000
+# HOST=127.0.0.1  # Uncomment when using reverse proxy (nginx/apache) to bind only to localhost
 
 # Redis Configuration (optional)
 # Set to 'true' to enable caching with Redis
