clean up debug logging, remove server steamid, collect player names

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,6 @@ REDIS_PORT=6379
 # RATE_LIMIT_MAX=100
 
 # Environment (optional)
-# Set to 'development' to enable detailed error messages
-# NODE_ENV=production
+# Set to 'production' for optimized logging (errors only to console, info/debug to files)
+# Set to 'development' for verbose console logging with colors
+NODE_ENV=production
