--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "rcon-srcds": "^2.1.0",
     "redis": "^5.9.0",
     "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.18.3"
   },
   "devDependencies": {
