add an endpoint for servers queried through steam master server

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ DB_USER=root
 DB_PASSWORD=password
 DB_NAME=csmonitor
 
+# Steam API Configuration
+# https://steamcommunity.com/dev/apikey
+STEAM_API_KEY=your_steam_api_key_here
+
 # Server Configuration
 PORT=3000
 # HOST=127.0.0.1  # Uncomment when using reverse proxy (nginx/apache) to bind only to localhost
