--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "admin:cleanup": "curl -X POST http://localhost:3000/admin/cleanup-history?days=30"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
