add global data for maps

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ DB_NAME=csmonitor
 # https://steamcommunity.com/dev/apikey
 STEAM_API_KEY=your_steam_api_key_here
 
+# CS2KZ API
+CS2KZ_API_URL=https://api.cs2kz.org/
+
+# GOKZ API (CS:GO KZ Map Database)
+# https://kztimerglobal.com/api/v2/
+GOKZ_API_URL=https://kztimerglobal.com/api/v2
+
 # Server Configuration
 PORT=3000
 # HOST=127.0.0.1  # Uncomment when using reverse proxy (nginx/apache) to bind only to localhost
