remove slash at end of url

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DB_NAME=csmonitor
 STEAM_API_KEY=your_steam_api_key_here
 
 # CS2KZ API
-CS2KZ_API_URL=https://api.cs2kz.org/
+CS2KZ_API_URL=https://api.cs2kz.org
 
 # GOKZ API (CS:GO KZ Map Database)
 # https://kztimerglobal.com/api/v2/
