--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "eslint": "^9.38.0",
     "jest": "^30.2.0",
+    "jsdom": "^27.1.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4"
