move to mariadb, separate db instance for kz records

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,16 @@
 # Database Configuration
 DB_HOST=localhost
+DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=password
 DB_NAME=csmonitor
+
+# KZ Records Database
+KZ_DB_HOST=127.0.0.1
+KZ_DB_PORT=3306
+KZ_DB_USER=root
+KZ_DB_PASSWORD=testpassword
+KZ_DB_NAME=kz_records_test
 
 # Steam API Configuration
 # https://steamcommunity.com/dev/apikey
@@ -12,7 +20,6 @@ STEAM_API_KEY=your_steam_api_key_here
 CS2KZ_API_URL=https://api.cs2kz.org
 
 # GOKZ API (CS:GO KZ Map Database)
-# https://kztimerglobal.com/api/v2/
 GOKZ_API_URL=https://kztimerglobal.com/api/v2
 
 # Server Configuration
