--- a/.env.test
+++ b/.env.test
@@ -3,9 +3,17 @@ NODE_ENV=test
 
 # Database
 DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=testpassword
 DB_NAME=server_api_test
+
+# KZ Records Database
+KZ_DB_HOST=127.0.0.1
+KZ_DB_PORT=3306
+KZ_DB_USER=root
+KZ_DB_PASSWORD=testpassword
+KZ_DB_NAME=kz_records_test
 
 # Redis (optional for tests)
 REDIS_ENABLED=false
