ratelimiting kz scrapes

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,16 @@ CS2KZ_API_URL=https://api.cs2kz.org
 # GOKZ API (CS:GO KZ Map Database)
 GOKZ_API_URL=https://kztimerglobal.com/api/v2
 
+# KZ Records Scraper Configuration (optional)
+# Set to 'false' to disable the scraper
+# KZ_SCRAPER_ENABLED=true
+# How often to check for new records (in milliseconds)
+# KZ_SCRAPER_INTERVAL=10000
+# Number of records to fetch in parallel (lower = less API load, higher = faster but may hit rate limits)
+# KZ_SCRAPER_CONCURRENCY=2
+# Delay between API requests in milliseconds (helps avoid rate limiting)
+# KZ_SCRAPER_REQUEST_DELAY=500
+
 # Server Configuration
 PORT=3000
 # HOST=127.0.0.1  # Uncomment when using reverse proxy (nginx/apache) to bind only to localhost
