--- a/.env.example
+++ b/.env.example
@@ -23,14 +23,15 @@ CS2KZ_API_URL=https://api.cs2kz.org
 GOKZ_API_URL=https://kztimerglobal.com/api/v2
 
 # KZ Records Scraper Configuration (optional)
+# GlobalKZ API Rate Limit: 500 requests per 5 minutes
 # Set to 'false' to disable the scraper
 # KZ_SCRAPER_ENABLED=true
-# How often to check for new records (in milliseconds)
-# KZ_SCRAPER_INTERVAL=10000
-# Number of records to fetch in parallel (lower = less API load, higher = faster but may hit rate limits)
-# KZ_SCRAPER_CONCURRENCY=2
-# Delay between API requests in milliseconds (helps avoid rate limiting)
-# KZ_SCRAPER_REQUEST_DELAY=500
+# How often to check for new records (in milliseconds) - default 8s to stay under rate limit
+# KZ_SCRAPER_INTERVAL=8000
+# Number of records to fetch per batch - default 8 (300 requests/5min = 60% of rate limit)
+# KZ_SCRAPER_CONCURRENCY=8
+# Delay between API requests in milliseconds - default 150ms
+# KZ_SCRAPER_REQUEST_DELAY=150
 
 # Server Configuration
 PORT=3000
