add proxy support for scraper (temp)

--- a/.env.example
+++ b/.env.example
@@ -23,15 +23,22 @@ CS2KZ_API_URL=https://api.cs2kz.org
 GOKZ_API_URL=https://kztimerglobal.com/api/v2
 
 # KZ Records Scraper Configuration (optional)
-# GlobalKZ API Rate Limit: 500 requests per 5 minutes
+# GlobalKZ API Rate Limit: 500 requests per 5 minutes per IP
 # Set to 'false' to disable the scraper
 # KZ_SCRAPER_ENABLED=true
-# How often to check for new records (in milliseconds) - default 8s to stay under rate limit
-# KZ_SCRAPER_INTERVAL=8000
-# Number of records to fetch per batch - default 8 (300 requests/5min = 60% of rate limit)
-# KZ_SCRAPER_CONCURRENCY=8
-# Delay between API requests in milliseconds - default 150ms
-# KZ_SCRAPER_REQUEST_DELAY=150
+# How often to check for new records (in milliseconds) - default 3750ms (3.75s) for 80% rate limit
+# KZ_SCRAPER_INTERVAL=3750
+# Number of records to fetch per batch - default 5 (400 requests/5min = 80% utilization)
+# KZ_SCRAPER_CONCURRENCY=5
+# Delay between API requests in milliseconds - default 100ms
+# KZ_SCRAPER_REQUEST_DELAY=100
+# Comma-separated list of proxies (rotates automatically) - each proxy multiplies throughput!
+# Example with 3 proxies: 3x speed = 14,400 records/hour = ~5.8 days for 2M records
+# KZ_SCRAPER_PROXIES=http://proxy1:8080,http://proxy2:8080,http://proxy3:8080
+# With authentication:
+# KZ_SCRAPER_PROXIES=http://user:pass@proxy1:8080,http://user2:pass2@proxy2:8080
+# SOCKS5 proxies also supported:
+# KZ_SCRAPER_PROXIES=socks5://proxy1:1080,socks5://proxy2:1080
 
 # Server Configuration
 PORT=3000
