--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "gamedig": "^5.3.2",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
     "mysql2": "^3.15.3",
     "rcon-srcds": "^2.1.0",
     "redis": "^5.9.0",
