remove proxies from api scraper (will use dedicated scraper to do initial scrape)

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,9 @@ GOKZ_API_URL=https://kztimerglobal.com/api/v2
 
 # KZ Records Scraper Configuration (optional)
 # GlobalKZ API Rate Limit: 500 requests per 5 minutes per IP
+# This integrated scraper is for maintenance mode (keeping records up-to-date).
+# For bulk scraping with proxy support, use scripts/standalone-scraper.js
+# 
 # Set to 'false' to disable the scraper
 # KZ_SCRAPER_ENABLED=true
 # How often to check for new records (in milliseconds) - default 3750ms (3.75s) for 80% rate limit
@@ -32,13 +35,6 @@ GOKZ_API_URL=https://kztimerglobal.com/api/v2
 # KZ_SCRAPER_CONCURRENCY=5
 # Delay between API requests in milliseconds - default 100ms
 # KZ_SCRAPER_REQUEST_DELAY=100
-# Comma-separated list of proxies (rotates automatically) - each proxy multiplies throughput!
-# Example with 3 proxies: 3x speed = 14,400 records/hour = ~5.8 days for 2M records
-# KZ_SCRAPER_PROXIES=http://proxy1:8080,http://proxy2:8080,http://proxy3:8080
-# With authentication:
-# KZ_SCRAPER_PROXIES=http://user:pass@proxy1:8080,http://user2:pass2@proxy2:8080
-# SOCKS5 proxies also supported:
-# KZ_SCRAPER_PROXIES=socks5://proxy1:1080,socks5://proxy2:1080
 
 # Server Configuration
 PORT=3000
