check for new bans in api

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,10 @@ GOKZ_API_URL=https://kztimerglobal.com/api/v2
 # KZ_SCRAPER_CONCURRENCY=5
 # Delay between API requests in milliseconds - default 100ms
 # KZ_SCRAPER_REQUEST_DELAY=100
+# How often to check for new bans (in milliseconds) - default 300000ms (5 minutes)
+# KZ_SCRAPER_BANS_INTERVAL=300000
+# Proxies to use for scraping (comma-separated list)
+# KZ_SCRAPER_PROXIES=http://username:password@proxy1:port,http://username:password@proxy2:port
 
 # Server Configuration
 PORT=3000
