--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,6 +99,8 @@ services:
       KZ_SCRAPER_CONCURRENCY: ${KZ_SCRAPER_CONCURRENCY:-5}
       KZ_SCRAPER_INTERVAL: ${KZ_SCRAPER_INTERVAL:-3600}
       KZ_SCRAPER_REQUEST_DELAY: ${KZ_SCRAPER_REQUEST_DELAY:-50}
+      KZ_SCRAPER_BANS_INTERVAL: ${KZ_SCRAPER_BANS_INTERVAL:-300000}
+      KZ_SCRAPER_PROXIES: ${KZ_SCRAPER_PROXIES}
       REDIS_ENABLED: ${REDIS_ENABLED:-true}
       REDIS_HOST: 127.0.0.1
       REDIS_PORT: ${REDIS_PORT:-6379}
