--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,14 @@ REDIS_PORT=6379
 # Maximum requests per 15-minute window per IP
 # RATE_LIMIT_MAX=100
 
+# Discord Webhook Configuration (optional)
+# Set to 'true' to enable Discord status updates
+DISCORD_WEBHOOK_ENABLED=false
+# Separate webhooks for CS:GO and CS2 servers
+# Get webhook URLs from Discord: Server Settings > Integrations > Webhooks
+DISCORD_WEBHOOK_CSGO=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
+DISCORD_WEBHOOK_CS2=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
+
 # Environment (optional)
 # Set to 'production' for optimized logging (errors only to console, info/debug to files)
 # Set to 'development' for verbose console logging with colors
