service to update player ban statuses

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ KZ_DB_USER=root
 KZ_DB_PASSWORD=testpassword
 KZ_DB_NAME=kz_records_test
 
+# KZ Global Ban Cleanup Service
+KZ_BAN_CLEANUP_INTERVAL=3600000  # 1 hour (in milliseconds)
+KZ_BAN_CLEANUP_ENABLED=true
+
 # Steam API Configuration
 # https://steamcommunity.com/dev/apikey
 STEAM_API_KEY=your_steam_api_key_here
