--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,8 @@ services:
       KZ_SCRAPER_REQUEST_DELAY: ${KZ_SCRAPER_REQUEST_DELAY:-50}
       KZ_SCRAPER_BANS_INTERVAL: ${KZ_SCRAPER_BANS_INTERVAL:-300000}
       KZ_SCRAPER_PROXIES: ${KZ_SCRAPER_PROXIES}
+      KZ_BAN_CLEANUP_ENABLED: ${KZ_BAN_CLEANUP_ENABLED:-true}
+      KZ_BAN_CLEANUP_INTERVAL: ${KZ_BAN_CLEANUP_INTERVAL:-3600000}
       REDIS_ENABLED: ${REDIS_ENABLED:-true}
       REDIS_HOST: 127.0.0.1
       REDIS_PORT: ${REDIS_PORT:-6379}
