local kz db env vars

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,23 @@
 # Database Configuration
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=3307
 DB_USER=root
 DB_PASSWORD=password
 DB_NAME=csmonitor
 
 # KZ Records Database
 KZ_DB_HOST=127.0.0.1
-KZ_DB_PORT=3306
+KZ_DB_PORT=3308
 KZ_DB_USER=root
 KZ_DB_PASSWORD=testpassword
 KZ_DB_NAME=kz_records_test
+
+# KZ Local Records Database
+KZ_LOCAL_DB_HOST=127.0.0.1
+KZ_LOCAL_DB_PORT=3306
+KZ_LOCAL_DB_USER=root
+KZ_LOCAL_DB_PASSWORD=testpassword
+KZ_LOCAL_DB_NAME=gokz
 
 # KZ Global Ban Cleanup Service
 KZ_BAN_CLEANUP_INTERVAL=3600000  # 1 hour (in milliseconds)
