--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,16 @@ services:
       - mariadb_data:/var/lib/mysql
       - ./db/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql:ro
     command: >
-      --innodb_buffer_pool_size=2G
-      --innodb_log_file_size=512M
-      --max_allowed_packet=256M
-      --innodb_flush_log_at_trx_commit=2
+      --innodb-buffer-pool-size=4G
+      --max-connections=200
+      --join-buffer-size=8M
+      --sort-buffer-size=8M
+      --tmp-table-size=256M
+      --max-heap-table-size=256M
+      --innodb-flush-log-at-trx-commit=2
+      --innodb-io-capacity=2000
+      --slow-query-log=1
+      --long-query-time=1
     healthcheck:
       test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
       interval: 10s
@@ -44,10 +50,16 @@ services:
       - mariadb_kz_data:/var/lib/mysql
       - ./db/kz-records-schema.sql:/docker-entrypoint-initdb.d/01-kz-schema.sql:ro
     command: >
-      --innodb_buffer_pool_size=2G
-      --innodb_log_file_size=512M
-      --max_allowed_packet=256M
-      --innodb_flush_log_at_trx_commit=2
+      --innodb-buffer-pool-size=4G
+      --max-connections=200
+      --join-buffer-size=8M
+      --sort-buffer-size=8M
+      --tmp-table-size=256M
+      --max-heap-table-size=256M
+      --innodb-flush-log-at-trx-commit=2
+      --innodb-io-capacity=2000
+      --slow-query-log=1
+      --long-query-time=1
     healthcheck:
       test: ["CMD", "healthcheck.sh", "--connect", "--innodb_initialized"]
       interval: 10s
