--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "admin:cleanup": "curl -X POST http://localhost:3000/admin/cleanup-history?days=30"
   },
   "dependencies": {
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-rate-limit": "^8.1.0",
+    "express-rate-limit": "^8.2.1",
     "gamedig": "^5.3.2",
     "http-proxy-agent": "^7.0.2",
     "https-proxy-agent": "^7.0.6",
@@ -43,10 +44,10 @@
     "winston": "^3.18.3"
   },
   "devDependencies": {
-    "eslint": "^9.38.0",
+    "eslint": "^9.39.1",
     "jest": "^30.2.0",
-    "jsdom": "^27.1.0",
-    "nodemon": "^3.1.10",
+    "jsdom": "^27.2.0",
+    "nodemon": "^3.1.11",
     "prettier": "^3.6.2",
     "supertest": "^7.1.4"
   },
