add local kz db credentials to compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,11 @@ services:
       KZ_DB_USER: ${KZ_DB_USER:-kz_user}
       KZ_DB_PASSWORD: ${KZ_DB_PASSWORD:-kz_password}
       KZ_DB_NAME: ${KZ_DB_NAME:-kz_records}
+      KZ_LOCAL_DB_HOST: ${KZ_LOCAL_DB_HOST:-127.0.0.1}
+      KZ_LOCAL_DB_PORT: ${KZ_LOCAL_DB_PORT:-3306}
+      KZ_LOCAL_DB_USER: ${KZ_LOCAL_DB_USER}
+      KZ_LOCAL_DB_PASSWORD: ${KZ_LOCAL_DB_PASSWORD}
+      KZ_LOCAL_DB_NAME: ${KZ_LOCAL_DB_NAME}
       KZ_SCRAPER_CONCURRENCY: ${KZ_SCRAPER_CONCURRENCY:-5}
       KZ_SCRAPER_INTERVAL: ${KZ_SCRAPER_INTERVAL:-3600}
       KZ_SCRAPER_REQUEST_DELAY: ${KZ_SCRAPER_REQUEST_DELAY:-50}
