fix the scripts to use modern docker

--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "format:check": "prettier --check .",
     "docker:build": "docker build -t server-api .",
     "docker:run": "docker run -p 3000:3000 --env-file .env server-api",
-    "docker:compose": "docker-compose up -d",
-    "docker:compose:down": "docker-compose down",
-    "docker:compose:logs": "docker-compose logs -f api",
+    "docker:compose": "docker compose up -d",
+    "docker:compose:down": "docker compose down",
+    "docker:compose:logs": "docker compose logs -f api",
     "admin:aggregate": "curl -X POST http://localhost:3000/admin/aggregate-daily",
     "admin:cleanup": "curl -X POST http://localhost:3000/admin/cleanup-history?days=30"
   },
