update scraper to go slow when no new records

--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,8 @@ GOKZ_API_URL=https://kztimerglobal.com/api/v2
 # KZ_SCRAPER_REQUEST_DELAY=100
 # How often to check for new bans (in milliseconds) - default 300000ms (5 minutes)
 # KZ_SCRAPER_BANS_INTERVAL=300000
+# Delay when caught up with records (in milliseconds) - default 30000ms (30s)
+# KZ_SCRAPER_IDLE_INTERVAL=30000
 # Proxies to use for scraping (comma-separated list)
 # KZ_SCRAPER_PROXIES=http://username:password@proxy1:port,http://username:password@proxy2:port
 
