--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -190,9 +190,11 @@ services:
       KZ_LOCAL_DB_USER: ${KZ_LOCAL_DB_USER}
       KZ_LOCAL_DB_PASSWORD: ${KZ_LOCAL_DB_PASSWORD}
       KZ_LOCAL_DB_NAME: ${KZ_LOCAL_DB_NAME}
+      KZ_SCRAPER_ENABLED: ${KZ_SCRAPER_ENABLED:-false}
       KZ_SCRAPER_CONCURRENCY: ${KZ_SCRAPER_CONCURRENCY:-5}
       KZ_SCRAPER_INTERVAL: ${KZ_SCRAPER_INTERVAL:-3600}
-      KZ_SCRAPER_REQUEST_DELAY: ${KZ_SCRAPER_REQUEST_DELAY:-50}
+      KZ_SCRAPER_IDLE_INTERVAL: ${KZ_SCRAPER_IDLE_INTERVAL:-30000}
+      KZ_SCRAPER_REQUEST_DELAY: ${KZ_SCRAPER_REQUEST_DELAY:-0}
       KZ_SCRAPER_BANS_INTERVAL: ${KZ_SCRAPER_BANS_INTERVAL:-300000}
       KZ_SCRAPER_PROXIES: ${KZ_SCRAPER_PROXIES}
       KZ_BAN_CLEANUP_ENABLED: ${KZ_BAN_CLEANUP_ENABLED:-true}
@@ -218,6 +220,7 @@ services:
     volumes:
       - ./config:/app/config:ro
       - ./logs:/app/logs
+      - ./src:/app/src:ro
     healthcheck:
       test:
         [
