--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,6 @@
 # Test Environment Configuration
 NODE_ENV=test
+DEBUG=true
 
 # Database
 DB_HOST=127.0.0.1
@@ -15,8 +16,15 @@ KZ_DB_USER=root
 KZ_DB_PASSWORD=testpassword
 KZ_DB_NAME=kz_records_test
 
+# KZ Local Records Database
+KZ_LOCAL_DB_HOST=127.0.0.1
+KZ_LOCAL_DB_PORT=3306
+KZ_LOCAL_DB_USER=root
+KZ_LOCAL_DB_PASSWORD=testpassword
+KZ_LOCAL_DB_NAME=gokz_test
+
 # Redis (optional for tests)
-REDIS_ENABLED=false
+REDIS_ENABLED=true
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
