--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,23 @@ KZ_DB_PASSWORD=testpassword
 KZ_DB_NAME=kz_records_test
 
 # KZ Local Records Database
-KZ_LOCAL_DB_HOST=127.0.0.1
-KZ_LOCAL_DB_PORT=3306
-KZ_LOCAL_DB_USER=root
-KZ_LOCAL_DB_PASSWORD=testpassword
-KZ_LOCAL_DB_NAME=gokz
+KZ_LOCAL_CS2_DB_HOST=127.0.0.1
+KZ_LOCAL_CS2_DB_PORT=3306
+KZ_LOCAL_CS2_DB_USER=root
+KZ_LOCAL_CS2_DB_PASSWORD=testpassword
+KZ_LOCAL_CS2_DB_NAME=cs2kz
+
+KZ_LOCAL_CSGO128_DB_HOST=127.0.0.1
+KZ_LOCAL_CSGO128_DB_PORT=3306
+KZ_LOCAL_CSGO128_DB_USER=root
+KZ_LOCAL_CSGO128_DB_PASSWORD=testpassword
+KZ_LOCAL_CSGO128_DB_NAME=csgokz128
+
+KZ_LOCAL_CSGO64_DB_HOST=127.0.0.1
+KZ_LOCAL_CSGO64_DB_PORT=3306
+KZ_LOCAL_CSGO64_DB_USER=root
+KZ_LOCAL_CSGO64_DB_PASSWORD=testpassword
+KZ_LOCAL_CSGO64_DB_NAME=csgokz64
 
 # KZ Global Ban Cleanup Service
 KZ_BAN_CLEANUP_INTERVAL=3600000  # 1 hour (in milliseconds)
