do updating stats externally within the api, expose endpoints for manual refreshes

--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,9 @@ KZ_LOCAL_CSGO64_DB_NAME=csgokz64
 KZ_BAN_CLEANUP_INTERVAL=3600000  # 1 hour (in milliseconds)
 KZ_BAN_CLEANUP_ENABLED=true
 
+# KZ Stats Update Interval
+KZ_STATS_INTERVAL=21600000 # 6 hours (in milliseconds)
+
 # Steam API Configuration
 # https://steamcommunity.com/dev/apikey
 STEAM_API_KEY=your_steam_api_key_here
