--- a/.env.example
+++ b/.env.example
@@ -100,3 +100,11 @@ DISCORD_WEBHOOK_CS2=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOO
 # Set to 'production' for optimized logging (errors only to console, info/debug to files)
 # Set to 'development' for verbose console logging with colors
 NODE_ENV=production
+
+# Admin Authentication
+# API key for admin endpoints (generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+# ADMIN_API_KEY=your_secure_api_key_here
+# Comma-separated list of IPs allowed admin access without API key (supports wildcards like 192.168.1.* and CIDR like 10.0.0.0/24)
+# ADMIN_IP_WHITELIST=192.168.1.*,10.0.0.0/24
+# Allow localhost admin access without API key in development mode (default: true in dev, false in production)
+# ADMIN_LOCALHOST_ALLOWED=true
