--- a/.env.example
+++ b/.env.example
@@ -108,3 +108,6 @@ NODE_ENV=production
 # ADMIN_IP_WHITELIST=192.168.1.*,10.0.0.0/24
 # Allow localhost admin access without API key in development mode (default: true in dev, false in production)
 # ADMIN_LOCALHOST_ALLOWED=true
+
+# API_KEY=your_api_key_here
+# API_IP_WHITELIST=192.168.1.*,
