update seed and env examples

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,18 @@ DB_USER=root
 DB_PASSWORD=password
 DB_NAME=csmonitor
 
+# Database Root Password (for Docker MariaDB initialization)
+# DB_ROOT_PASSWORD=rootpassword
+
 # KZ Records Database
 KZ_DB_HOST=127.0.0.1
 KZ_DB_PORT=3308
 KZ_DB_USER=root
 KZ_DB_PASSWORD=testpassword
 KZ_DB_NAME=kz_records_test
+
+# KZ Records Database Root Password (for Docker MariaDB initialization)
+# KZ_DB_ROOT_PASSWORD=kz_rootpassword
 
 # KZ Local Records Database
 KZ_LOCAL_CS2_DB_HOST=127.0.0.1
@@ -72,6 +78,9 @@ GOKZ_API_URL=https://kztimerglobal.com/api/v2
 PORT=3000
 # HOST=127.0.0.1  # Uncomment when using reverse proxy (nginx/apache) to bind only to localhost
 
+# Debug Mode (optional)
+# DEBUG=false
+
 # Redis Configuration (optional)
 # Set to 'true' to enable caching with Redis
 REDIS_ENABLED=false
@@ -82,11 +91,11 @@ REDIS_PORT=6379
 
 # CORS Configuration (optional)
 # Comma-separated list of allowed origins, or * for all
-# CORS_ORIGIN=http://localhost:3000,https://yourdomain.com
+CORS_ORIGIN=*
 
 # Rate Limiting (optional)
 # Maximum requests per 15-minute window per IP
-# RATE_LIMIT_MAX=100
+RATE_LIMIT_MAX=500
 
 # Discord Webhook Configuration (optional)
 # Set to 'true' to enable Discord status updates
@@ -109,5 +118,8 @@ NODE_ENV=production
 # Allow localhost admin access without API key in development mode (default: true in dev, false in production)
 # ADMIN_LOCALHOST_ALLOWED=true
 
+# API Authentication (for rate limit bypass)
+# API key that bypasses rate limits (separate from admin)
 # API_KEY=your_api_key_here
-# API_IP_WHITELIST=192.168.1.*,
+# Comma-separated list of IPs that bypass rate limits
+# API_IP_WHITELIST=192.168.1.*,10.0.0.0/24
